# Projekt_Analiza_Zaleznosci

./: .gitignore  README.md  combined.prof  main.py  main_notebook.ipynb  pyproject.toml
data/: C1.xlsx  nowe_mieszkania.xlsx  powierzchnia_i_ludnosc_w_przekroju_terytorialnym_w_2024_roku_tablice.xlsx  raport_na_dzien_1_września_2023_r.csv  raport_zezwoleń_czynnych_na_dzień_2_września_2024_r.csv
src/project_analiza_Szymon/: calculate.py  plots.py  preprocessing.py
src/project_analiza_Szymon/io_utils/: read.py  write.py
tests/: test_calculate.py  test_data.py  test_io_utils.py  test_preprocessing.py
