[project]
name = "analiza_zaleznosci"
version = "0.1.0"
description = "Służy do analizy korelacji między kilkoma zjawiskami"
authors = [
    { name = "Szymon Kałużny"}
]
requires-python = ">=3.9"
dependencies = ['matplotlib',
'numpy',
'pandas',
'pytest',
'scikit_learn'
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.urls]
Homepage = "https://gitlab.mimuw.edu.pl/sk468753/prace_z_narzedzi"

[tool.setuptools]
package-dir = {"" = "src"}

